# engram

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  entrypoint.sh  mcp_server.py  pyproject.toml  requirements.txt  schema.sql  seed_demo.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
browser-capture/: README.md  STORE_LISTING.md  background.js  capture.js  manifest.json  options.html  options.js  redact.js
cli/: pm.py
examples/: quickstart.py
path_memory/: __init__.py  aging.py  classify.py  db.py  embed.py  fold.py  integration.py  links.py  memory.py  perspectives.py  recall.py  temporal.py
seed/: __init__.py  compile.py
tests/: test_features.py  test_temporal.py
